--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -2,12 +2,19 @@
 
   <PropertyGroup>
       <TargetFramework>netcoreapp3.1</TargetFramework>
+      <OutputType>Library</OutputType>
   </PropertyGroup>
 
 <ItemGroup>
-  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
-<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
-<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.4">
+  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
+    <PrivateAssets>all</PrivateAssets>
+    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+  </PackageReference>
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.8" />
+<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
+<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
 <PrivateAssets>all</PrivateAssets>
 <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 </PackageReference>
@@ -17,7 +24,6 @@
 
 </ItemGroup>
 <ItemGroup>
-  <Folder Include="Entities\" />
-
+  <Folder Include="DbEntity\" />
 </ItemGroup>
 </Project>
