--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -4,6 +4,17 @@
       <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Views\About\about.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Views\About\about.jpg">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 <ItemGroup>
   <PackageReference Include="Autofac" Version="5.1.2" />
 <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
