--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -49,4 +49,15 @@
 <Folder Include="Utility\" />
 
 </ItemGroup>
+<ItemGroup>
+  <None Include="wwwroot\vendor\datepicker\daterangepicker.js" />
+  <None Include="wwwroot\vendor\datepicker\moment.min.js" />
+  <None Include="wwwroot\vendor\font-awesome-4.7\fonts\fontawesome-webfont.svg" />
+  <None Include="wwwroot\vendor\font-awesome-4.7\fonts\fontawesome-webfont.woff2" />
+  <None Include="wwwroot\vendor\jquery\jquery.js" />
+  <None Include="wwwroot\vendor\jquery\jquery.min.js" />
+  <None Include="wwwroot\vendor\mdi-font\fonts\Material-Design-Iconic-Font.svg" />
+  <None Include="wwwroot\vendor\mdi-font\fonts\Material-Design-Iconic-Font.woff2" />
+  <None Include="wwwroot\vendor\select2\select2.min.js" />
+</ItemGroup>
 </Project>
