İmage adding added

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -47,6 +47,7 @@
 <Folder Include="Properties\" />
 <Folder Include="ViewComponents\" />
 <Folder Include="Utility\" />
+<Folder Include="wwwroot\images\resimler\" />
 
 </ItemGroup>
 <ItemGroup>
